test/spec/if_label_scope.fail.txt
;;; ERROR: 1
;;; TOOL: run-js-spec
;;; STDIN_FILE: third_party/testsuite/if_label_scope.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/if_label_scope.fail.wast:6:19: undefined label variable "$l"
        (else (br $l (i32.const 42)))
                  ^^

;;; STDERR ;;)
